# pinterest

./: .gitignore  Pipfile  pyproject.toml  requirements.txt
pragmatic/: manage.py
pragmatic/accountapp/: decorators.py  forms.py  models.py  urls.py  views.py
pragmatic/accountapp/migrations/: 0001_initial.py  0002_delete_helloworld.py
pragmatic/accountapp/templates/accountapp/: create.html  delete.html  detail.html  hello_world.html  login.html  update.html
pragmatic/articleapp/: decorators.py  forms.py  models.py  urls.py  views.py
pragmatic/articleapp/migrations/: 0001_initial.py  0002_article_project.py  0003_article_like.py
pragmatic/commentapp/: decorators.py  forms.py  models.py  urls.py  views.py
pragmatic/commentapp/migrations/: 0001_initial.py
pragmatic/likeapp/: models.py  urls.py  views.py
pragmatic/likeapp/migrations/: 0001_initial.py
pragmatic/pragmatic/: asgi.py  settings.py  urls.py  wsgi.py
pragmatic/pragmatic/settings/: base.py  deploy.py  local.py
pragmatic/profileapp/: decorators.py  forms.py  models.py  urls.py  views.py
pragmatic/profileapp/migrations/: 0001_initial.py
pragmatic/projectapp/: forms.py  models.py  urls.py  views.py
pragmatic/projectapp/migrations/: 0001_initial.py
pragmatic/static/: base.css
pragmatic/static/js/: magicgrid.js
pragmatic/subscriptionapp/: apps.py  models.py  urls.py  views.py
pragmatic/subscriptionapp/migrations/: 0001_initial.py
pragmatic/templates/: base.html  footer.html  head.html  header.html
pragmatic/templates/snippets/: card_project.html  list_fragment.html  pagination.html
(+14 files in other folders)
