[tool.poetry]
name = "pinterest"
version = "0.1.0"
description = ""
authors = ["Youngjin Jo <yjinjo@berkeley.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
django-bootstrap4 = "^22.3"
Pillow = "^9.4.0"
python-dotenv = "^1.0.0"
djhtml = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
